syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "io.saltybyte.proto";

service HelloService {
  rpc Hello(google.protobuf.Empty) returns (HelloResponse);
}

message HelloResponse {
  string message = 1;
}
